# misc

./: .gitignore  Brainfuck.cpp  CPU.cpp  CSVPlotter.py  CalculateVoyagerSpeed.py  CompareChecksum.bat  Deadfish.py  DriveCar.py  Fib.py  Forest.py  HelloWorld.pol  LICENSE  Makefile  Misc.txt  Obfuscation.py  Pendulum.py  PlanetPeriodCalculate.py  Polynomial.py  README.md  RenameWeatherFiles.py  Roman.py  Snake.py  SprawozdanieFUW.txt  Symmetries.py  SymmetryGroupOfAWord.py  Toread.txt  TrigTableGen.py  WWWTasksDownloader.py  WeatherDownloader.py  adamaprocesor.cpp  adamed.py  array.s  asm.asm  backuper.bat  c800to53aa.txt  calc.s  calc_better_loop.s  call_arm_from_thumb.s  collatz.s  collatz_func.s  (+40 more)
Brainfuck/: .gitignore  BFFormatter.py  Brainfuck.cpp  HelloWorld.b  Makefile  README.md  as.py  assembler.py  bcc.c  comp.py  enc.py  encoding_example.s  interp.py  interpreter.s  libbf.s
Brown/: ABSTRACT.txt  Brown.py  Brown2.py  LICENSE  README.md  Silniki_brownowskie.tex  analysis.py  brown2d.py
C/: calc.c  checksx.c  decom.c
ColorOf/: kmeans.f90  kmeansmodule.c  picturer.py
Elixir/: .gitignore  blog.py
Logic 1.2.10 (32-bit)/: linux_readme.txt
MatrixCalc/: LICENSE  README.md
OI/: klu.py  nie.py  par.c  par.py  rob.py
OM/: question_one.tex  question_two.tex  quiestion_three.tex
STM Projects/registers/: CMakeLists.txt  Makefile  MakefileOLD  stm32f091xc.cmake
STM Projects/registers/dest/: main.elf  main.hex
STM Projects/registers/src/: common.c  common.h  configure.c  configure.h  main.c
STM32/: _math.h  dac.c  i2c.c  trig.c
ideas/: Konkursy.txt  (+9 more)
(+45 files in other folders)
